# dapr-push-pop-actor

./: .env  .gitignore  BULK_POP_ROADMAP.md  CLAUDE.md  Dockerfile  README.md  build-and-test.sh  docker-compose.yml  pyproject.toml
dapr/components/: statestore-postgres.yaml
dapr/config/: config.yml
dapr/pgadmin/: pgpassfile  servers.json
dashboard/src/: App.tsx
dashboard/src/components/: LockInfo.tsx  MessagesList.tsx  PopSection.tsx  PushSection.tsx  QueueHeader.module.css  QueueHeader.tsx  RegisterSinkModal.module.css  RegisterSinkModal.tsx  TabContainer.module.css  TabContainer.tsx  WireMockControls.module.css  WireMockControls.tsx  WiremockRequestItem.module.css  WiremockRequestItem.tsx  WiremockRequestsList.module.css  WiremockRequestsList.tsx
dashboard/src/hooks/: useQueueOperations.ts  useUnifiedWiremock.ts
dashboard/src/services/: queueApi.ts
dashboard/src/styles/: global.css
dashboard/src/types/: queue.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPETING_CONSUMERS_ROADMAP.md  DASHBOARD.md  QUICKSTART.md  SINK_IMPLEMENTATION.md
dotnet/: Dockerfile  NuGet.config  PushPopActor.sln
dotnet/nuget-local/: Dapr.Actors.1.17.5-rc.2.nupkg
dotnet/src/DaprMQ.ApiServer/: DaprMQ.ApiServer.csproj  Program.cs  appsettings.json
dotnet/src/DaprMQ.Interfaces/: IActorInvoker.cs  (+7 more)
examples/: curl_examples.sh  direct_usage.py
examples/api_server/: __init__.py  main.py
features/: dead-letter-queue.md  message-acknowledgement.md  n-queue-priority-system.md  segmented-queue.md  soft-delete-external-segments.md
helm/: README.md  values.yaml
helm/templates/: deployment-gateway.yaml  deployment-worker.yaml
load_tests/: .gitignore  Dockerfile  README.md  locustfile.py  requirements.txt
load_tests/scenarios/: __init__.py  base.py  s3_mixed.py
load_tests/scripts/: warmup.sh
load_tests/utils/: __init__.py
load_tests_direct/: Dockerfile  locustfile.py  requirements.txt
load_tests_direct/scenarios/: base_dapr.py  s3_mixed_dapr.py
src/push_pop_actor/: __init__.py  actor.py
tests/: __init__.py  test_actor.py
wiremock/mappings/: example.json
(+53 files in other folders)
